--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,25 @@
 body {
+ padding: 50px;
+ /* background-color: green; */
+ background-color: blue;
+ font-family: sans-serif;
+
+}
+
+
+.container{
+ display:flex;
+ justify-content: flex;
+}
+
+button{
+ margin-left: 10px;
+}
+input{
+ margin-left: 10px;
+}
+
+/* body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
@@ -10,4 +31,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
+} */
